# TetGen

./: .gitignore  CMakeLists.txt  README.md
bench/: README.md  bench_cdt.cxx  bench_convex_hull.cxx  bench_delaunay.cxx  bench_voronoi.cxx  run_benchmarks.py  utils.h
cpp/: MeshOptimizer.cpp  MeshOptimizer.hpp  TetMeshGenerator.cpp  TetMeshGenerator.h
tests/: test_isotropic.cpp  tests.cxx
